--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -45,7 +45,9 @@
             <br>
             <div class="box-element hidden" id="payment-info">
                 <small>Paypal Options</small>
-				<button id="make-payment" >Make Payment</button>
+				<div id="paypal-button-container"></div>
+				
+				<!--<button id="make-payment" >Make Payment</button>-->
             </div>
         </div>
 
@@ -72,9 +74,46 @@
         </div>
     </div>
 
+<script src="https://www.paypal.com/sdk/js?client-id=AR5EEAkeI1wHvwvQNN7ybmM6Twg1RH0mPfr2plN7dX2hh24K6V4gWctI0MuJ1Tg5ijqE-n5OkjKYPlnK&currency=USD&disable-funding=credit"></script>
+
+	<script>
+		var total = '{{order.get_cart_total|floatformat:2}}'
+
+        // Render the PayPal button into #paypal-button-container
+        paypal.Buttons({
+
+			style:{
+				color:'blue',
+				shape:'rect',
+			},
+
+            // Set up the transaction
+            createOrder: function(data, actions) {
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: {
+                            value: parseFloat(total).toFixed(2)  
+                        }
+                    }]
+                });
+            },
+
+            // Finalize the transaction
+            onApprove: function(data, actions) {
+                return actions.order.capture().then(function(orderData) {
+                    // Successful capture! For demo purposes:
+                    console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
+                    var transaction = orderData.purchase_units[0].payments.captures[0];
+                    alert('Transaction '+ transaction.status + ': ' + transaction.id + '\n\nSee console for all available details'); 
+                });
+            }
+
+
+        }).render('#paypal-button-container');
+    </script>
+
 	<script type="text/javascript">
 		var shipping = '{{order.shipping}}'
-		var total = '{{order.get_cart_total|floatformat:2}}'
 		
 		if (shipping == 'False'){
 			document.getElementById('shipping-info').innerHTML = ''
@@ -91,9 +130,9 @@
 			document.getElementById('payment-info').classList.remove('hidden')
 		})
 
-		document.getElementById('make-payment').addEventListener('click', function(e){
-			submitFormData() 
-		})
+		// document.getElementById('make-payment').addEventListener('click', function(e){
+		// 	submitFormData() 
+		// })
 
 		function submitFormData(){
 			console.log('Payment button clicked')
